--- a/popup.html
+++ b/popup.html
@@ -10,10 +10,32 @@
 <script src="popup.js" defer></script>
 <style>
 :root { --sqrl-blue: #007CC3; --grey: #7FBDE1; }
+@media screen {
 * { box-sizing: border-box; }
 html,body { display: flex; margin: 0; flex-direction: column; }
 body,label,input { font-size: 17px; }
-button { font-size: 17px; text-align: center; }
+/* Fx mac: 784w x 584h */
+body { font-family: Verdana, Helvetica; width: 680px; height: 584px; }
+button {
+	text-align: center;
+	display: inline-block;
+	text-align: center;
+	text-shadow: 0.5px 0.5px 0 #FFF;
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 25px;
+	border: 0 none;
+	border-radius: 6px;
+	box-shadow: 1px 1px 1px rgba(0,0,0,.3), inset 1px 1px 1px rgba(255,255,255,.4);
+	background: linear-gradient(to bottom, #FFF 0%, #CCC 100%);
+}
+button:hover {
+	box-shadow: 1px 1px 1px rgba(0,0,0,.29), inset 0px 0px 2px rgba(0,0,0, .5);
+}
+
+button:active {
+	box-shadow: inset 0px 0px 3px rgba(0,0,0, .8);
+}
 textarea { font-size: 17px; }
 .notyet { opacity: 0.3; }
 input[type="text"],input[type="password"] { border: 0 none; border-radius: 4px; padding: 0 6px; font-family: monospace; font-size: 15px; line-height: 23px; }
@@ -21,8 +43,6 @@ input[type="text"],input[type="password"] { border: 0 none; border-radius: 4px; 
 ::-moz-placeholder { color: #CCC; }
 :not(output):-moz-ui-invalid { box-shadow: inset 0 0 1.5px 1px red, 0 0 1.5px 1px red; }
 
-/* Fx mac: 784w x 584h */
-body { font-family: Verdana, Helvetica; width: 680px; height: 584px; }
 main { height: 100%; margin: 4px; padding: 8px; background-color: var(--sqrl-blue); color: #FFF; border-radius: 4px; }
 h1 { margin: 0 0 16px 0; font-size: 46px; line-height: 32px; }
 h1>img { float: right; width: 39px; height: 39px; vertical-align: top; border: 1px solid #FFF; border-radius: 8px; box-shadow: 0 0 4px #FFF; }
@@ -31,9 +51,9 @@ h1>span { font-size: 16px; padding-left: 24px; }
 label.pwd { display: inline-block; margin: 0 0 12px 0; }
 label>span { display: inline-block; width: 150px; vertical-align: top; }
 label>input[type="checkbox"]+span { width: 400px; vertical-align: middle; }
-label>input[type="text"],label>input[type="number"],label>input[type="password"],label>textarea,label>progress,label>button { width: 270px; }
-label.twobtns>button { width: 90px; }
-label.twobtns>button+button { width: 180px; }
+label>input[type="text"],label>input[type="number"],label>input[type="password"],label>textarea,label>progress,label>button { width: 270px; vertical-align: super; }
+span.twobtns>button { width: 90px; }
+span.twobtns>button+button { width: 178px; margin-left: 2px; }
 label>textarea { border: 0 none; height: 150px; line-height: 22px; }
 #import label>textarea,#export label>textarea { height: 300px; }
 label.pwd>input { width: 380px; }
@@ -54,12 +74,20 @@ div>input[type="radio"]:checked~div { display: block; }
 
 button.success::after,label.success::after { content: " ✅"; }
 button.failure::after,label.failure::after { content: " ❌"; }
-
+div.print { display: none; }
+}
 @media print {
 	@page { size: auto; margin: 0; }
-	body { background: url(icons/background.svg) no-repeat center; white-space: pre; font: 36px monospace; text-align: center; padding: 2em; }
-	h1,h2 { margin: 0; }
+	body { font: 36px monospace; text-align: center; padding: 1em 2em; }
+	h1 { margin: 0; font-size: 108px; }
+	h1>img { width: 64px; margin-right: 8px; }
 	hr { border: 0 none; display: inline-block; width: 90%; border-top: 5px dashed #000; vertical-align: top; }
+	div>form,label,form#passwd,input[name="tab"],span.twobtns,label+b,br { display: none; }
+	div.print,div>form.print { display: block; }
+	label.print { display: inline-block; width: 100%; }
+	label>span { font-size: 48px; display: block; margin: 0.5em 0; }
+	textarea,input[type="text"] { width: 100%; font-size: 36px; line-height: 48px; }
+	textarea { height: 15em; margin-bottom: 1em; }
 }
 </style>
 </head>
@@ -70,72 +98,88 @@ button.failure::after,label.failure::after { content: " ❌"; }
 	<label class="pwd"><span>Password</span><input type="password" name="password" autofocus/></label><label><input type="checkbox" name="savepwd"/>Remember</label>
 </form>
 <div>
-	<div><input type="radio" name="tab" value="1" id="tab1"/><label for="tab1">Create Identity</label><div>
-		<form id="create">
-			<label><span></span><button type="button" id="generateNewIdentity">Generate new Identity</button></label><br/>
-			<label><span></span><progress value="0"></progress></label><br/>
-			<label><span>Identity</span><textarea name="identity" readonly></textarea></label><br/>
-			<label><span>Rescue Code</span><input type="text" name="rescuecode" readonly/></label><b title="Show Rescue Code">👁</b><br/>
-			<input type="hidden" name="enscryptedrescuecode"/>
-			<label><span></span>Write this code down on paper</label><br/>
+	<div>
+		<input type="radio" name="tab" value="1" id="tab1"/><label for="tab1">Create Identity</label>
+		<div>
+			<form id="create" class="print">
+				<label><span></span><button type="button" id="generateNewIdentity">Generate new Identity</button></label><br/>
+				<label><span></span><progress value="0"></progress></label><br/>
+				<label class="print"><span>Identity</span><textarea name="identity" readonly></textarea></label><br/>
+				<div class="print">✂ <hr/></div>
+				<label class="print"><span>Rescue Code</span><input type="text" name="rescuecode" readonly/></label><b title="Show Rescue Code">👁</b><br/>
+				<input type="hidden" name="enscryptedrescuecode"/>
+				<label><span></span>Write this code down on paper</label><br/>
+				<br/>
+				<label><span>Rescue Code*</span><input type="text" name="verifyrescuecode" pattern="(\d{4}-?){5}\d{4}"/></label><br/>
+				<label><span></span></label><span class="twobtns"><button type="button" id="printIdentity">🖨 Print</button><button>Use this Identity</button></span><br/>
+			</form>
+		</div>
+	</div>
+	<div>
+		<input type="radio" name="tab" value="2" id="tab2"/><label for="tab2">Import Identity</label>
+		<div>
+			<form id="import">
+				<label><span>Identity</span><textarea name="identity" placeholder="KbEx Gvz6 bECA Zrq3 HSxg n2cp idwN UnGj eyM7 w7qK mgMg rgs3 DBGf PS8E RbUB kc2S 62AR mhAL caBj gSZt FPVP XDLD QMi9 LcY4 caYY J6eR q83"></textarea></label><b></b><br/>
+				<label><span>Rescue Code</span><input type="password" name="rescuecode" placeholder="1234-5678-9012-3456-7890-1234" pattern="(\d{4}-?){5}\d{4}"/></label><br/>
+				<label><span></span><progress value="0"></progress></label><br/>
+				<label><span></span><button>Import</button></label><br/>
+			</form>
+		</div>
+	</div>
+	<div>
+		<input type="radio" name="tab" value="3" id="tab3"/><label for="tab3">Export Identity</label>
+		<div>
+			<form id="export">
+				<label><span>Identity</span><textarea name="identity" readonly></textarea></label><b></b><br/>
+			</form>
+		</div>
+	</div>
+	<div>
+		<input type="radio" name="tab" value="4" id="tab4"/><label for="tab4">Set Password</label>
+		<div>
+			<form id="setpassword" class="notyet">
+				<label><span>Password*</span><input type="password" name="password"/></label><br/>
+				<label><span>Password Again*</span><input type="password" name="verifypassword"/></label><br/>
+				<label><span></span><progress value="0"></progress></label><br/>
+				<label><span></span><button>Save</button></label><br/>
+			</form>
+		</div>
+	</div>
+	<div>
+		<input type="radio" name="tab" value="5" id="tab5"/><label for="tab5">Change Password</label>
+		<div>
+			<form id="changepassword" class="notyet">
+				<label><span>Old Password</span><input type="password" name="password"/></label><br/>
+				<br/>
+				<label><span>New Password*</span><input type="password" name="password"/></label><br/>
+				<label><span>Password Again*</span><input type="password" name="verifypassword"/></label><br/>
+				<label><span></span><progress value="0"></progress></label><br/>
+				<label><span></span><button>Save</button></label><br/>
+			</form>
+		</div>
+	</div>
+	<div>
+		<input type="radio" name="tab" value="6" id="tab6"/><label for="tab6">Clear Data</label>
+		<div>
+			<form id="deletepassword" class="notyet">
+				<label><span>Delete Password from Browser Memory</span><button>Delete Password</button></label><br/>
+			</form>
 			<br/>
-			<label><span>Rescue Code*</span><input type="text" name="verifyrescuecode" pattern="(\d{4}-?){5}\d{4}"/></label><br/>
-			<label class="twobtns"><span></span><button type="button" id="printIdentity">🖨 Print</button><button>Use this Identity</button></label><br/>
-		</form>
-	</div></div>
-
-	<div><input type="radio" name="tab" value="2" id="tab2"/><label for="tab2">Import Identity</label><div>
-		<form id="import">
-			<label><span>Identity</span><textarea name="identity" placeholder="KbEx Gvz6 bECA Zrq3 HSxg n2cp idwN UnGj eyM7 w7qK mgMg rgs3 DBGf PS8E RbUB kc2S 62AR mhAL caBj gSZt FPVP XDLD QMi9 LcY4 caYY J6eR q83"></textarea></label><b></b><br/>
-			<label><span>Rescue Code</span><input type="password" name="rescuecode" placeholder="1234-5678-9012-3456-7890-1234" pattern="(\d{4}-?){5}\d{4}"/></label><br/>
-			<label><span></span><progress value="0"></progress></label><br/>
-			<label><span></span><button>Import</button></label><br/>
-		</form>
-	</div></div>
-
-	<div><input type="radio" name="tab" value="3" id="tab3"/><label for="tab3">Export Identity</label><div>
-		<form id="export">
-			<label><span>Identity</span><textarea name="identity" readonly></textarea></label><b></b><br/>
-		</form>
-	</div></div>
-
-	<div><input type="radio" name="tab" value="4" id="tab4"/><label for="tab4">Set Password</label><div>
-		<form id="setpassword" class="notyet">
-			<label><span>Password*</span><input type="password" name="password"/></label><br/>
-			<label><span>Password Again*</span><input type="password" name="verifypassword"/></label><br/>
-			<label><span></span><progress value="0"></progress></label><br/>
-			<label><span></span><button>Save</button></label><br/>
-		</form>
-	</div></div>
-
-	<div><input type="radio" name="tab" value="5" id="tab5"/><label for="tab5">Change Password</label><div>
-		<form id="changepassword" class="notyet">
-			<label><span>Old Password</span><input type="password" name="password"/></label><br/>
-			<br/>
-			<label><span>New Password*</span><input type="password" name="password"/></label><br/>
-			<label><span>Password Again*</span><input type="password" name="verifypassword"/></label><br/>
-			<label><span></span><progress value="0"></progress></label><br/>
-			<label><span></span><button>Save</button></label><br/>
-		</form>
-	</div></div>
-
-	<div><input type="radio" name="tab" value="6" id="tab6"/><label for="tab6">Clear Data</label><div>
-		<form id="deletepassword" class="notyet">
-			<label><span>Delete Password from Browser Memory</span><button>Delete Password</button></label><br/>
-		</form>
-		<br/>
-		<form id="eraseidentity">
-			<label><span>Erase all SQRL Identity Information from Browser Memory and Disk</span></label>
-			<input type="checkbox" name="eraseconfirm" class="confirm"/>
-			<button type="button" disabled>Erase SQRL Identity</button>
-			<button>Erase SQRL Identity</button>
-		</form>
-	</div></div>
-
-	<div><input type="radio" name="tab" value="7" id="tab7"/><label for="tab7">Help</label><div>
-		<label><span>Version</span><b id="version">0.0.0</b></label><br/>
-		<label><span>More info</span><a href="https://grc.com/sqrl/sqrl.htm" target="_blank">grc.com/sqrl</a></label><br/>
-	</div></div>
+			<form id="eraseidentity">
+				<label><span>Erase all SQRL Identity Information from Browser Memory and Disk</span></label>
+				<input type="checkbox" name="eraseconfirm" class="confirm"/>
+				<button type="button" disabled>Erase SQRL Identity</button>
+				<button>Erase SQRL Identity</button>
+			</form>
+		</div>
+	</div>
+	<div>
+		<input type="radio" name="tab" value="7" id="tab7"/><label for="tab7">Help</label>
+		<div>
+			<label><span>Version</span><b id="version">0.0.0</b></label><br/>
+			<label><span>More info</span><a href="https://grc.com/sqrl/sqrl.htm" target="_blank">grc.com/sqrl</a></label><br/>
+		</div>
+	</div>
 </div>
 </main>
 </body>
