Moved most utils to background

--- a/popup.html
+++ b/popup.html
@@ -56,6 +56,7 @@ span.twobtns>button { width: 90px; }
 span.twobtns>button+button { width: 178px; margin-left: 2px; }
 label>textarea { border: 0 none; height: 150px; line-height: 22px; }
 #import label>textarea,#export label>textarea { height: 300px; }
+label>dl { display: inline-block; width: 300px; margin: 0; }
 label.pwd>input { width: 380px; }
 label+b { padding: 0 0 0 8px; cursor: pointer; vertical-align: top; display: inline-block; width: 28px; line-height: 22px; }
 label+b:hover { text-shadow: 0 0 4px #FFF; }
@@ -178,6 +179,10 @@ div.print { display: none; }
 		<div>
 			<label><span>Version</span><b id="version">0.0.0</b></label><br/>
 			<label><span>More info</span><a href="https://grc.com/sqrl/sqrl.htm" target="_blank">grc.com/sqrl</a></label><br/>
+			<label><span>Abbreviations</span><dl><dt>COA</dt><dd>Cross-Origin Authentication</dd>
+<dt>IDTY</dt><dd>Identity</dd>
+<dt>PASS</dt><dd>Password</dd>
+</dl></label><br/>
 		</div>
 	</div>
 </div>
