--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,8 @@ html,body { display: flex; margin: 0; flex-direction: column; }
 body,label,input { font-size: 17px; }
 /* Fx mac: 784w x 584h */
 body { font-family: Verdana, Helvetica; width: 680px; height: 584px; }
+body.passwdOnly { height: auto; }
+body.passwdOnly>main>div { display: none; }
 button {
 	text-align: center;
 	display: inline-block;
@@ -39,6 +41,7 @@ button:active {
 textarea { font-size: 17px; }
 .notyet { opacity: 0.3; }
 input[type="text"],input[type="password"] { border: 0 none; border-radius: 4px; padding: 0 6px; font-family: monospace; font-size: 15px; line-height: 23px; }
+input[readonly],textarea[readonly] { background-color: #DDD; }
 ::-webkit-input-placeholder { color: #CCC; }
 ::-moz-placeholder { color: #CCC; }
 :not(output):-moz-ui-invalid { box-shadow: inset 0 0 1.5px 1px red, 0 0 1.5px 1px red; }
@@ -50,7 +53,7 @@ h1>span { font-size: 16px; padding-left: 24px; }
 
 label { vertical-align: top; }
 label.pwd { display: inline-block; margin: 0 0 12px 0; }
-label>span { display: inline-block; width: 150px; vertical-align: top; }
+label>span { display: inline-block; width: 152px; vertical-align: top; }
 label>input[type="checkbox"]+span { width: 400px; vertical-align: middle; }
 label>input[type="text"],label>input[type="number"],label>input[type="password"],label>textarea,label>progress,label>button { width: 270px; vertical-align: super; }
 span.twobtns>button { width: 90px; }
@@ -95,9 +98,10 @@ div.print { display: none; }
 </head>
 <body>
 <main>
-<h1><img src="icons/256.png"/>SQRL<span id="identityhash"></span></h1>
-<form id="passwd" class="notyet">
-	<label class="pwd"><span>Password</span><input type="password" name="password" autofocus/></label><label><input type="checkbox" name="savepwd" checked/>Remember</label>
+<h1><img src="icons/256.png"/>SQRL<span id="identityhash" title="This is the name of the active identity"></span></h1>
+<form id="passwd">
+	<label class="pwd"><span>Password</span><input type="password" name="password" autofocus/></label><label><input type="checkbox" name="savepwd"/>Remember</label>
+	<button style="display:none">Submit</button>
 </form>
 <div>
 	<div>
@@ -113,6 +117,8 @@ div.print { display: none; }
 				<label><span></span>Write this code down on paper</label><br/>
 				<br/>
 				<label><span>Rescue Code*</span><input type="text" name="verifyrescuecode" pattern="(\d{4}-?){5}\d{4}"/></label><br/>
+				<label><span>Choose Password</span><input type="password" name="password"/></label><br/>
+				<label><span>Password Again</span><input type="password" name="verifypassword"/></label><br/>
 				<label><span></span></label><span class="twobtns"><button type="button" id="printIdentity">🖨 Print</button><button>Use this Identity</button></span><br/>
 			</form>
 		</div>
@@ -121,8 +127,10 @@ div.print { display: none; }
 		<input type="radio" name="tab" value="2" id="tab2"/><label for="tab2">Import Identity</label>
 		<div>
 			<form id="import">
-				<label><span>Identity</span><textarea name="identity" placeholder="KbEx Gvz6 bECA Zrq3 HSxg n2cp idwN UnGj eyM7 w7qK mgMg rgs3 DBGf PS8E RbUB kc2S 62AR mhAL caBj gSZt FPVP XDLD QMi9 LcY4 caYY J6eR q83"></textarea></label><b></b><br/>
-				<label><span>Rescue Code</span><input type="password" name="rescuecode" placeholder="1234-5678-9012-3456-7890-1234" pattern="(\d{4}-?){5}\d{4}"/></label><br/>
+				<label><span>Identity*</span><textarea name="identity" placeholder="KbEx Gvz6 bECA Zrq3 HSxg n2cp idwN UnGj eyM7 w7qK mgMg rgs3 DBGf PS8E RbUB kc2S 62AR mhAL caBj gSZt FPVP XDLD QMi9 LcY4 caYY J6eR q83"></textarea></label><b></b><br/>
+				<label><span>Rescue Code*</span><input type="password" name="rescuecode" placeholder="1234-5678-9012-3456-7890-1234" pattern="(\d{4}-?){5}\d{4}"/></label><br/>
+				<label><span>Choose Password</span><input type="password" name="password"/></label><br/>
+				<label><span>Password Again</span><input type="password" name="verifypassword"/></label><br/>
 				<label><span></span><progress value="0"></progress></label><br/>
 				<label><span></span><button>Import</button></label><br/>
 			</form>
@@ -133,17 +141,6 @@ div.print { display: none; }
 		<div>
 			<form id="export">
 				<label><span>Identity</span><textarea name="identity" readonly></textarea></label><b></b><br/>
-			</form>
-		</div>
-	</div>
-	<div>
-		<input type="radio" name="tab" value="4" id="tab4"/><label for="tab4">Set Password</label>
-		<div>
-			<form id="setpassword" class="notyet">
-				<label><span>Password*</span><input type="password" name="password"/></label><br/>
-				<label><span>Password Again*</span><input type="password" name="verifypassword"/></label><br/>
-				<label><span></span><progress value="0"></progress></label><br/>
-				<label><span></span><button>Save</button></label><br/>
 			</form>
 		</div>
 	</div>
