update help url

--- a/popup.html
+++ b/popup.html
@@ -182,7 +182,7 @@ div.print { display: none; }
 		<input type="radio" name="tab" value="7" id="tab7"/><label for="tab7">Help</label>
 		<div>
 			<label><span>Version</span><b id="version">0.0.0</b></label><br/>
-			<label><span>More info</span><a href="https://grc.com/sqrl/sqrl.htm" target="_blank">grc.com/sqrl</a></label><br/>
+			<label><span>More info</span><a href="https://sqrl.grc.com" target="_blank">sqrl.grc.com</a></label><br/>
 			<label><span>Abbreviations</span><dl><dt>Auth</dt><dd>Authentication requested</dd>
 <dt>COA</dt><dd>Cross-Origin Authentication attempt</dd>
 <dt>IDTY</dt><dd>Missing Identity</dd>
