Fixes for Chrome

--- a/popup.html
+++ b/popup.html
@@ -37,6 +37,7 @@ button:hover {
 button:active {
 	box-shadow: inset 0px 0px 3px rgba(0,0,0, .8);
 }
+textarea,input { font-family: "Lucida Console", Menlo, monospace; }
 textarea { font-size: 17px; }
 .notyet { opacity: 0.3; }
 input[type="text"],input[type="password"] { border: 0 none; border-radius: 4px; padding: 0 6px; font-family: monospace; font-size: 15px; line-height: 23px; }
