--- a/printIdentity.html
+++ b/printIdentity.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<script src="printIdentity.js"></script>
 <title>SQRL</title>
-<script src="printIdentity.js" defer></script>
 <style>
 @page { size: auto; margin: 0; }
 body { font-family: Verdana, sans-serif; text-align: center; padding: 1em 2em; }
@@ -15,7 +15,7 @@ div { margin-top: 1vh; font-size: 6vw; font-family: "Lucida Console", Menlo, mon
 div#rescuecode { font-size: 5vw; }
 </style>
 </head>
-<body class="A4">
+<body>
 	<h1><img src="icons/256.png"/>SQRL</h1>
 	<h2>Identity</h2>
 	<div id="identity"></div>
