Style badge text like Fx badges

--- a/popup.html
+++ b/popup.html
@@ -77,6 +77,9 @@ div>input[type="radio"]:checked~div { display: block; }
 
 button.success::after,label.success::after { content: " ✅"; }
 button.failure::after,label.failure::after { content: " ❌"; }
+
+dl>dt { display: inline-block; padding: 1px 3px; color: #FFF; background-color: red; }
+
 .shake { animation: 0.4s linear 0s normal none 1 running shake; }
 @keyframes shake {
 	8%, 41% { transform: translate(-10px, 0); }
