Better QR scan errors, scan can be cancelled

--- a/importIdentity.html
+++ b/importIdentity.html
@@ -18,7 +18,7 @@
 		<label><span>Choose .sqrl file</span><input type="file" name="identityfile" accept=".sqrl,.sqrc"/></label><br/>
 		 or<br/>
 		<label><span>Scan QR code</span><button type="button" name="qrscan">Scan 📷</button></label><br/>
-		<canvas id="qrcanvas"></canvas>
+		<div id="qrscan"><button id="cancelqrscan" type="button">Cancel</button><canvas id="qrcanvas"></canvas></div>
 		<br/>
 		<label><span>Textual Identity</span><textarea name="identity" spellcheck="false" readonly></textarea></label><br/>
 		<label><span></span><button title="Closes this tab.
